@startuml
title Client Networking Class Diagram (Current)

class ApiManager {
    - m_networkService: NetworkService
    + loginUser(username, password)
    + getUsers()
    + addUser(user)
    + editUser(user)
    + deleteUser(id)
    + getRoleList()
    + createRole(role)
    + editRole(role)
    + deleteRole(id)
    + getProductTypes()
    + createProductType(productType)
    + editProductType(productType)
    + deleteProductType(id)
}

class NetworkService {
    - m_serializer: IDataSerializer
    - m_manager: QNetworkAccessManager
    + init()
    + sendRequest(endpoint, method, dataset, resourceId)
}

interface IDataSerializer {
    + serialize(dataset: Dataset): string
    + deserialize(serializedData: string): Dataset
}

class JsonSerializer

ApiManager --> NetworkService
NetworkService --> IDataSerializer
JsonSerializer ..|> IDataSerializer

@enduml
